JT-7406 Fix wrapping issues

--- a/app/assets/stylesheets/components/_search-autosuggest.scss
+++ b/app/assets/stylesheets/components/_search-autosuggest.scss
@@ -107,8 +107,7 @@
     margin-top: -185px;
     z-index: 5;
     margin-left: -10px;
-    // width: 93%;
-    width: 100%;
+    width: 93%;
     @media (max-width: 320px){
       width: 110%;
     }
